# medical-rag-ai-assistant

./: .gitignore  CODE_REVIEW.md  README.md  README.txt  render.yaml
.claude/: settings.local.json
audit/2026-04-22/: security-report.md
frontend/: .gitignore  main.py  pyproject.toml
server/: .env.example  .gitignore  README.md  main.py  pyproject.toml
server/auth/: __init__.py  models.py  routes.py
server/chat/: __init__.py  chat_query.py  models.py  routes.py
server/config/: db.py  logger.py
server/docs/: __init__.py  routes.py  vectorstore.py
